--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "anax/mvc": "dev-master"
     },
     "autoload": {
         "psr-4": { "Deg\\": "src/" }
