--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,14 @@ language: php
 php:
     - 5.6
  
-script: 
-    - phpunit --bootstrap test/config.php test
+
+before_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - composer install
+    script:
+    #- phpunit --bootstrap test/config.php test
+    - phpunit --bootstrap test/config.php --coverage-clover coverage.clover test
+ 
+
+    after_script:
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
