--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_script:
     - composer install
 script:
     #- phpunit --bootstrap test/config.php test
-    - phpunit --bootstrap test/config.php --coverage-clover coverage.clover test
+    #- phpunit --bootstrap test/config.php --coverage-clover coverage.clover test
+    - phpunit
  
 
 after_script:
