--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ before_script:
     - composer install
 script:
     #- phpunit --bootstrap test/config.php test
-    #- phpunit --bootstrap test/config.php --coverage-clover coverage.clover test
-    - phpunit
- 
+    - phpunit --bootstrap test/config.php --coverage-clover coverage.clover test
+
 
 after_script:
     - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
